update with javascript

--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
   <body>
     <header>
       <div class="main-head">
+        <div class="open-nav">
+          <button id="open-btn">|||</button>
+        </div>
         <div class="input">
-          <input type="text" />
+          <input type="text" placeholder="Search in Cartegories" />
           <img
             src="resources/h-input-icon.png"
             alt="input-img"
@@ -30,6 +33,24 @@
         </div>
       </div>
       <div class="sub-head">
+        <div class="close-nav">
+          <button id="close-btn">X</button>
+        </div>
+
+          <div class="profile">
+          <img src="resources/profile.png" />
+          <h5 class="p1">Account</h5>
+          <img src="resources/android-chrome-512x512.png" />
+          <h5 class="p2">Shoping</h5>
+        </div>
+           <div class="input">
+          <input type="text" / placeholder="Search in Cartegories">
+          <img
+            src="resources/h-input-icon.png"
+            alt="input-img"
+            class="input-img"
+          />
+        </div>
         <nav>
           <ul>
             <li>Jewelry & Accessories</li>
@@ -326,5 +347,8 @@
       </div>
     </div>
     <!-- </div> -->
+
+
+    <script src="index.js"></script>
   </body>
 </html>
