--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>E-commerce website</title>
+    <title>E-commerce website By Vc</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
+    <header id="header">
       <div class="main-head">
         <div class="open-nav">
           <button id="open-btn">|||</button>
@@ -343,7 +343,7 @@
         <img src="resources/icons_payment 1.png" alt="">
       </div>
       <div class="f-three">
-        <img src="resources/button.png" alt="">
+        <a href="#header"><img src="resources/button.png" alt=""></a>
       </div>
     </div>
     <!-- </div> -->
